# FootballChamp

./: LICENSE  README.md  config_dsl.yaml  config_epl.yaml  config_ita.yaml  pyproject.toml  test.py  tmp_fixtures.csv  tmp_preds_ita.csv
artifacts/: BT_DSL.json  BT_EPL.json  BT_ITA.json  predictions.csv  shots_epl.csv  shots_ita.csv  xg_dsl.csv  xg_epl.csv  xg_ita.csv
artifacts/models_dsl/20250901-195451-019fa75f83/: calibrator.joblib  gbm.joblib  gbm_cal.joblib  meta.json  model.joblib
artifacts/models_dsl/20250901-213703-d851f7ced5/: calibrator.joblib  gbm.joblib  gbm_cal.joblib  meta.json  model.joblib  stacker.joblib
artifacts/models_dsl/20250901-215713-b57e6aca95/: calibrator.joblib  gbm.joblib  gbm_cal.joblib  meta.json  model.joblib  stacker.joblib
artifacts/models_dsl/20250901-224353-db7073515a/: calibrator.joblib  meta.json  model.joblib  stacker.joblib
artifacts/models_dsl/20250902-121144-cef8039bda/: calibrator.joblib  gbm.joblib  meta.json  model.joblib  stacker.joblib
fc/: cli.py  config.py  logging_config.py
fc/web/: app.py
fchamp/data/: dsl_2012_2026.csv  epl_2015_2026.csv  loader.py  serie_a_2015_2025.csv
fchamp/evaluation/: backtest.py  metrics.py
fchamp/features/: advanced_stats.py  dixon_coles.py  elo.py  engineering.py  market.py
fchamp/models/: calibration.py  goals_advanced.py  goals_poisson.py  learned_post_corrector.py  market_prior_corrector.py  registry.py
fchamp/pipelines/: calibrate.py  predict.py  train.py
football_champ.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+307 files in other folders)
