[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-champ"
version = "0.1.0"
description = "Serie A match outcome prediction with robust ML pipeline"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "pydantic>=2.4",
  "typer[all]>=0.9",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "rich>=13.7",
  "optuna>=3.5",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "jinja2>=3.1",
  "aiohttp>=3.9",
  "understat>=0.4.0",
  "requests>=2.31",
]

[project.scripts]
fchamp = "fc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fc*", "fchamp*"]
exclude = ["calcio*", "tests*", "examples*", "scripts*", "data*"]